fixed overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 body{
-    overflow: hidden;
     color:#333; 
     font-family: 'Courier New', Courier, monospace;
     margin:0px;
